--- a/style/main.css
+++ b/style/main.css
@@ -320,7 +320,7 @@ hr {
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
-    background: #f2b179; }
+    background: #eee4da; }
   .tile.tile-16 .tile-inner {
     color: #f9f6f2;
     background: #f59563; }
@@ -328,7 +328,7 @@ hr {
     color: #f9f6f2;
     background: #f67c5f; }
   .tile.tile-64 .tile-inner {
-    color: #f9f6f2;
+    color: #eee4da;
     background: #f65e3b; }
   .tile.tile-128 .tile-inner {
     color: #f9f6f2;
